--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ jupyterlab = "^2"
 unidecode = "^1.1.1"
 pandas = "^1.0.3"
 pyarrow = "^0.17.0"
+matplotlib = "^3.2.1"
+scikit-learn = "^0.22.2"
+numpy = "^1.18.3"
+shapely = "^1.7.0"
+cartopy = "0.18.0rc1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
